<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/display_new_cat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="katrina.idle.cat.DisplayCatActivity">

    <!-- Global guidelines. -->
    <android.support.constraint.Guideline
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/top_guideline"
            app:layout_constraintGuide_percent="0.03"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="7dp" tools:layout_editor_absoluteX="0dp"
    />
    <android.support.constraint.Guideline
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/bottom_guideline"
            app:layout_constraintGuide_percent="0.9"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="216dp" tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/left_guideline"
            app:layout_constraintGuide_percent="0.05"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="0dp" tools:layout_editor_absoluteX="11dp"
    />
    <android.support.constraint.Guideline
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/ads_bottom_guideline"
            app:layout_constraintGuide_percent="1.0"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="240dp" tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/right_guideline"
            app:layout_constraintGuide_percent="0.97"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="0dp" tools:layout_editor_absoluteX="211dp"
    />

    <android.support.constraint.Guideline
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/vertical_center_guideline"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="0dp" tools:layout_editor_absoluteX="109dp"
    />
    <android.support.constraint.Guideline
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/one_third_center_guideline"
            app:layout_constraintGuide_percent="0.3333"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="0dp" tools:layout_editor_absoluteX="73dp"
    />
    <android.support.constraint.Guideline
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/two_third_center_guideline"
            app:layout_constraintGuide_percent="0.6666"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="0dp" tools:layout_editor_absoluteX="145dp"
    />

    <android.support.constraint.Guideline
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/horizontal_center_guideline"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="120dp" tools:layout_editor_absoluteX="0dp"
    />
    <!-- Cat status section guidelines. -->
    <android.support.constraint.Guideline
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/cat_status_top_guideline"
            app:layout_constraintGuide_percent="0.09"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="22dp" tools:layout_editor_absoluteX="0dp"
    />
    <android.support.constraint.Guideline
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/cat_status_bottom_guideline"
            app:layout_constraintGuide_percent="0.18"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="43dp" tools:layout_editor_absoluteX="0dp"
    />
    <!-- Cat section guidelines. -->
    <android.support.constraint.Guideline
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/cat_top_guideline"
            app:layout_constraintGuide_percent="0.2"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="48dp" tools:layout_editor_absoluteX="0dp"
    />
    <android.support.constraint.Guideline
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/cat_bottom_guideline"
            app:layout_constraintGuide_percent="0.7"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="168dp" tools:layout_editor_absoluteX="0dp"
    />
    <!-- Operator section guidelines. -->
    <android.support.constraint.Guideline
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/operator_section_top_guideline"
            app:layout_constraintGuide_percent="0.8"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="192dp" tools:layout_editor_absoluteX="0dp"
    />
    <!-- Cat Status -->
    <TextView
            android:text="TextView"
            android:id="@+id/username_text_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintTop_toTopOf="@+id/top_guideline"
            app:layout_constraintBottom_toTopOf="@+id/cat_status_top_guideline"
            app:layout_constraintRight_toLeftOf="@+id/vertical_center_guideline"/>
    <TextView
            android:text="Date: 1"
            android:id="@+id/age_text_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/vertical_center_guideline"
            app:layout_constraintTop_toTopOf="@+id/top_guideline"
            app:layout_constraintBottom_toTopOf="@+id/cat_status_top_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"/>

    <TextView
        android:id="@+id/cat_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cat_name_button"
        app:layout_constraintBottom_toTopOf="@+id/cat_status_bottom_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="@+id/cat_status_top_guideline" />

    <TextView
        android:id="@+id/cat_static_food_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_button"
        app:layout_constraintBottom_toTopOf="@+id/cat_status_bottom_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/vertical_center_guideline"
        app:layout_constraintTop_toTopOf="@+id/cat_status_top_guideline" />
    <TextView android:id="@+id/cat_food_text_view"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="\???"
              app:layout_constraintLeft_toRightOf="@+id/cat_static_food_text_view"
              app:layout_constraintTop_toTopOf="@+id/cat_status_top_guideline"
              app:layout_constraintBottom_toTopOf="@+id/cat_status_bottom_guideline"/>

    <TextView
        android:id="@+id/cat_static_hungry_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hungry_button"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/cat_name_text_view" />
    <TextView android:id="@+id/cat_hungry_text_view"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="\???"
              app:layout_constraintLeft_toRightOf="@+id/cat_static_hungry_text_view"
              app:layout_constraintTop_toBottomOf="@+id/cat_name_text_view"/>

    <TextView
        android:id="@+id/cat_static_intimacy_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intimacy_button"
        app:layout_constraintLeft_toLeftOf="@+id/vertical_center_guideline"
        app:layout_constraintTop_toBottomOf="@+id/cat_name_text_view" />
    <TextView android:id="@+id/cat_intimacy_text_view"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="\???"
              app:layout_constraintLeft_toRightOf="@+id/cat_static_intimacy_text_view"
              app:layout_constraintTop_toBottomOf="@+id/cat_name_text_view"/>
    <!-- Cat -->
    <ImageView
            android:id="@+id/cat_image_view"
            android:src="@drawable/pusheen_normal_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintTop_toTopOf="@+id/cat_top_guideline"
            app:layout_constraintRight_toLeftOf="@+id/right_guideline"
            app:layout_constraintBottom_toTopOf="@+id/cat_bottom_guideline"/>
    <TextView
            android:id="@+id/cat_chat_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="..."
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintTop_toTopOf="@+id/cat_bottom_guideline"/>
    <!-- Operator section items. -->
    <Button
        android:id="@+id/feed_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="feedMyCat"
        android:text="@string/feed_button"
        app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toLeftOf="@+id/one_third_center_guideline"
        app:layout_constraintTop_toTopOf="@+id/operator_section_top_guideline" />

    <Button
        android:id="@+id/chat_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="chatWithCat"
        android:text="@string/chat_button"
        app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/one_third_center_guideline"
        app:layout_constraintRight_toLeftOf="@+id/two_third_center_guideline"
        app:layout_constraintTop_toTopOf="@+id/operator_section_top_guideline" />
    <Button
            android:text="Get Food"
            android:id="@+id/ads_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="watchAds"
            app:layout_constraintLeft_toLeftOf="@+id/two_third_center_guideline"
            app:layout_constraintTop_toTopOf="@+id/operator_section_top_guideline"
            app:layout_constraintRight_toLeftOf="@+id/right_guideline"
            app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"/>

    <!-- Ads -->
    <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="432dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/bottom_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"
            app:layout_constraintBottom_toBottomOf="@+id/ads_bottom_guideline"
            tools:layout_editor_absoluteX="0dp"
            tools:ignore="MissingConstraints">
    </com.google.android.gms.ads.AdView>

</android.support.constraint.ConstraintLayout>
